added old files before refactoring to hooks

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+img {
+  border-style: none;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+li,
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+.react-icons {
+  vertical-align: middle;
+}
